# Intelligent-Closed-Caption-CC-Suggestion-Tool

./: .gitignore  README.md
docs/: architecture.mmd  cli-examples.md  implementation-plan.md
main/: README.md  pyproject.toml  requirements-audio.txt  requirements-vision.txt
main/cc_suggester/audio/: extractor.py
main/cc_suggester/audio/backends/: __init__.py  base.py  dsp.py  yamnet.py
main/cc_suggester/cli/: app.py
main/cc_suggester/core/: config.py  errors.py  media.py  pipeline.py  types.py
main/cc_suggester/decision/: labels.py  rules.py
main/cc_suggester/output/: csv_report.py  srt.py
main/cc_suggester/ui/: streamlit_app.py
main/cc_suggester/vision/backends/: __init__.py  base.py  mediapipe.py  opencv.py
main/configs/: default.json
main/tests/: test_outputs.py
